k8s/services/matrix/app/element/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: matrix
  hostnames:
    - element.lama-corp.space
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: element
          port: 80
